plugins {
    id 'fabric-loom' version '1.6-SNAPSHOT'
    id 'maven-publish'
}

version = '1.16.5-1.5.7'
group = 'com.sharedbackpack'

base {
    archivesName = 'sharedbackpack'
}

repositories {
    mavenCentral()
    maven { url = 'https://jitpack.io' }
}

dependencies {
    minecraft 'com.mojang:minecraft:1.16.5'
    mappings 'net.fabricmc:yarn:1.16.5+build.10:v2'
    modImplementation 'net.fabricmc:fabric-loader:0.14.25'
    modImplementation 'net.fabricmc.fabric-api:fabric-api:0.42.0+1.16'

    implementation('org.xerial:sqlite-jdbc:3.45.1.0') {
        exclude group: 'org.slf4j', module: 'slf4j-api'
    }
    include('org.xerial:sqlite-jdbc:3.45.1.0') {
        exclude group: 'org.slf4j', module: 'slf4j-api'
    }
    implementation('com.github.Towdium:PinIn:1.6.0') {
        exclude group: 'it.unimi.dsi'
    }
    include('com.github.Towdium:PinIn:1.6.0') {
        exclude group: 'it.unimi.dsi'
    }
}

processResources {
    inputs.property 'version', project.version
    filesMatching('fabric.mod.json') {
        expand version: project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 8
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}
